tests/snapshots/clone_syntax__clone_basic.snap
---
source: tests/clone_syntax.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: Clone {
                    expr: Variable {
                        name: Span {
                            start: 20,
                            end: 24,
                        },
                        span: Span {
                            start: 20,
                            end: 24,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 24,
                    },
                },
                span: Span {
                    start: 6,
                    end: 24,
                },
            },
            span: Span {
                start: 6,
                end: 26,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 26,
    },
}
