tests/snapshots/clone_syntax__clone_chained.snap
---
source: tests/clone_syntax.rs
assertion_line: 82
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: Clone {
                    expr: Clone {
                        expr: Variable {
                            name: Span {
                                start: 26,
                                end: 30,
                            },
                            span: Span {
                                start: 26,
                                end: 30,
                            },
                        },
                        span: Span {
                            start: 20,
                            end: 30,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 30,
                    },
                },
                span: Span {
                    start: 6,
                    end: 30,
                },
            },
            span: Span {
                start: 6,
                end: 32,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 32,
    },
}
