tests/snapshots/clone_syntax__clone_in_expression.snap
---
source: tests/clone_syntax.rs
assertion_line: 121
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: MethodCall {
                    target: Clone {
                        expr: Variable {
                            name: Span {
                                start: 23,
                                end: 27,
                            },
                            span: Span {
                                start: 23,
                                end: 27,
                            },
                        },
                        span: Span {
                            start: 17,
                            end: 27,
                        },
                    },
                    method: Variable {
                        name: Span {
                            start: 30,
                            end: 36,
                        },
                        span: Span {
                            start: 30,
                            end: 36,
                        },
                    },
                    args: [],
                    span: Span {
                        start: 17,
                        end: 38,
                    },
                },
                span: Span {
                    start: 6,
                    end: 38,
                },
            },
            span: Span {
                start: 6,
                end: 40,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 40,
    },
}
