tests/snapshots/clone_syntax__clone_precedence.snap
---
source: tests/clone_syntax.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Binary {
                    left: Clone {
                        expr: Variable {
                            name: Span {
                                start: 22,
                                end: 27,
                            },
                            span: Span {
                                start: 22,
                                end: 27,
                            },
                        },
                        span: Span {
                            start: 16,
                            end: 27,
                        },
                    },
                    op: Coalesce,
                    right: Variable {
                        name: Span {
                            start: 31,
                            end: 36,
                        },
                        span: Span {
                            start: 31,
                            end: 36,
                        },
                    },
                    span: Span {
                        start: 16,
                        end: 36,
                    },
                },
                span: Span {
                    start: 6,
                    end: 36,
                },
            },
            span: Span {
                start: 6,
                end: 38,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 38,
    },
}
