tests/snapshots/clone_syntax__clone_with_array_access.snap
---
source: tests/clone_syntax.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: Clone {
                    expr: ArrayDimFetch {
                        array: Variable {
                            name: Span {
                                start: 20,
                                end: 28,
                            },
                            span: Span {
                                start: 20,
                                end: 28,
                            },
                        },
                        dim: Some(
                            Integer {
                                value: [
                                    48,
                                ],
                                span: Span {
                                    start: 29,
                                    end: 30,
                                },
                            },
                        ),
                        span: Span {
                            start: 20,
                            end: 31,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 31,
                    },
                },
                span: Span {
                    start: 6,
                    end: 31,
                },
            },
            span: Span {
                start: 6,
                end: 33,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 33,
    },
}
