tests/snapshots/clone_syntax__clone_with_empty_parens.snap
---
source: tests/clone_syntax.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 11,
                    },
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                expr: Clone {
                    expr: Error {
                        span: Span {
                            start: 20,
                            end: 21,
                        },
                    },
                    span: Span {
                        start: 14,
                        end: 21,
                    },
                },
                span: Span {
                    start: 6,
                    end: 21,
                },
            },
            span: Span {
                start: 6,
                end: 23,
            },
        },
    ],
    errors: [
        ParseError {
            span: Span {
                start: 20,
                end: 21,
            },
            message: "Syntax error",
        },
    ],
    span: Span {
        start: 6,
        end: 23,
    },
}
